:sparkles:falta detalles

--- a/Dia9/index.html
+++ b/Dia9/index.html
@@ -9,17 +9,16 @@
 <body>
     <div class="imag">
         <img src="img/pokedex (1).png" alt="">
-        <div class="idNombre">
-
+        <div class="idNombre" id="nombreId">
+            <p id="imgPoke"></p>
+            <h3 id="nombre">-<span></span></h3>
         </div>
         <div class="ingresoId">
-            <form action="">
                 <input class="BotonInput" type="text" placeholder="Name or Number">
-            </form>
         </div>
         <div class="atrasAdel">
-            <div class="prev"><p>Prev<</p></div>
-            <div class="next"><p>Next></p></div>
+            <button class="prev"><p>Prev <</p></button>
+            <button class="next"><p>Next ></p></button>
         </div>
     </div>
 </body>
