:sparkles:Dia 12 terminado

--- a/Dia12/index.html
+++ b/Dia12/index.html
@@ -10,44 +10,14 @@
     <article class="titallito">
         <h1>Mr.Work</h1>
         <div class="boton">
-            <input type="text" id="tareaInput" placeholder="crear tareas">
-            <button id="agreTarea">Añadir</button>
+            <input type="text" id="taskInput" placeholder="crear tareas">
+            <button id="addTaskButton">Añadir</button>
         </div>
     </article>
     <article class="opciones">
-        <div class="capsulanegativa">
-            <div class="infotextNegativo">
-                <p>Ejemplo</p>
-            </div>
-            <div class="botonesNegativos">
 
-                <div class="terminadoNegativi"> 
-                    <img src="storage/img/pngwing.com (2).png" alt="" data-id="1" class="completado">
-                </div>
-
-                <div class="eliminadonegativo">
-                    <img src="storage/img/pngwing.com (4).png" alt="" data-id="1" class="eliminado">
-                </div>
-
-            </div>
-        </div>
-        <div class="capsula"></div>
-            <div class="infotex">
-                <p>Ejemplo</p>
-            </div>
-            <div class="botones">
-
-                <div class="terminado"> 
-                    <img src="storage/img/pngwing.com (2).png" alt="" data-id="1" class="completado">
-                </div>
-
-                <div class="eliminado">
-                    <img src="storage/img/pngwing.com (4).png" alt="" data-id="1" class="eliminado">
-                </div>
-
-            </div>
-        </div>
     </article>
+
 </body>
-<script src="js/scrip.js"></script>
+<script src="./js/scrip.js"></script>
 </html>
