:sparkles:Dia terminado

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="imagenes4" href="Dia10"><img src="imagenesPortada/Valorant.jpeg" alt=""></a>
         <a class="imagenes5" href="Dia11/"><img src="imagenesPortada/Usuarios.jpeg" alt=""></a>
         <a class="imagenes6" href="Dia12/"><img src="imagenesPortada/Tareas.png" alt=""></a>
+        <a class="imagenes6" href="Dia15/"><img src="imagenesPortada/Pokemon.jpeg" alt=""></a>
     </div>
 </body>
 </html>
