--- a/index.html
+++ b/index.html
@@ -7,17 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <div class="titulo">
         <h1 class="letraTitulo">Mis Proyectos de JavaScrip</h1>
     </div>
+
     <div class="urlFotos">
-        <a class="imagenes1" href="Dia7"><img src="imagenesPortada/Super Heroe.jpeg" alt=""></a>
-        <a class="imagenes2" href="Dia8"><img src="imagenesPortada/Star Wars.jpeg" alt=""></a>
-        <a class="imagenes3" href="Dia9"><img src="imagenesPortada/Pokemon.jpeg" alt=""></a>
-        <a class="imagenes4" href="Dia10"><img src="imagenesPortada/Valorant.jpeg" alt=""></a>
-        <a class="imagenes5" href="Dia11/"><img src="imagenesPortada/Usuarios.jpeg" alt=""></a>
-        <a class="imagenes6" href="Dia12/"><img src="imagenesPortada/Tareas.png" alt=""></a>
-        <a class="imagenes6" href="Dia15/"><img src="imagenesPortada/Pokemon.jpeg" alt=""></a>
+
+        <div class="content">
+            <a class="imagenes1" href="Dia7"><img src="imagenesPortada/Super Heroe.jpeg" alt=""></a>
+            <a class="imagenes2" href="Dia8"><img src="imagenesPortada/Star Wars.jpeg" alt=""></a>
+        </div>
+        <div class="content">
+            <a class="imagenes3" href="Dia9"><img src="imagenesPortada/Pokemon.jpeg" alt=""></a>
+            <a class="imagenes4" href="Dia10"><img src="imagenesPortada/Valorant.jpeg" alt=""></a>
+        </div>
+        <div class="content">
+            <a class="imagenes5" href="Dia11/"><img src="imagenesPortada/Usuarios.jpeg" alt=""></a>
+            <a class="imagenes6" href="Dia12/"><img src="imagenesPortada/Tareas.png" alt=""></a>
+        </div>
+        <div class="content">
+            <a class="imagenes7" href="Dia15/"><img src="imagenesPortada/Pokemon.jpeg" alt=""></a>
+            <a class="imagenes8" href="Dia16/"><img src="imagenesPortada/Portal Datos Abiertos.jpg" alt=""></a>
+        </div>
     </div>
 </body>
 </html>
